Handle properly inconsistent parser state by closing the session

BUG: 287424
(cherry picked from commit 2bc7588fc206e14a625b629998318938e25ed43b)